# CCC_IgorMarcoMarcos_PampaTickets

./: .env.example  Makefile  README.md  docker-compose.yml
backend/: .gitignore  pyproject.toml
backend/alembic/versions/: 0b8cb6d25901_add_email_verificado_and_drop_legacy_.py  1e3f35c8c53e_adiciona_geolocalizacao_opcional_ao_.py  2b9f6ccda677_unique_codigo_cupom_por_evento.py  b2c3d4e5f6a7_endurece_recuperacao_senha.py  be566b79592c_ingresso_pedido_item_id_nullable.py  c7d8e9f0a1b2_constraints_estoque_e_uso_cupom.py  d1a2b3c4e5f6_adiciona_tabela_recuperacao_senhas.py  d61b91f14d62_confirmacao_email_initial.py  e1f2a3b4c5d6_unique_pagamento_e_reembolso.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  phone.py  rate_limit.py
backend/app/db/: base.py  seed.py
backend/app/integrations/: email_service.py
backend/app/models/: confirmacao_email.py  cortesia.py  cupom.py  evento.py  ingresso.py  lote.py  pagamento.py  recuperacao_senha.py  usuario.py
backend/app/reports/: __init__.py  branding.py  ingresso_pdf.py  relatorio_pdf.py
backend/app/repositories/: certificado_repo.py  checkin_repo.py  confirmacao_email_repo.py  cortesia_repo.py  cupom_repo.py  evento_repo.py  foto_repo.py  ingresso_repo.py  lote_repo.py  pagamento_repo.py  pedido_repo.py  recuperacao_senha_repo.py  reembolso_repo.py
backend/app/schemas/: checkin.py  cortesia.py  cupom.py  evento.py  foto.py  ingresso.py  pedido.py  (+1 more)
backend/docs/: RECOVERY_PASSWORD.md  WHATSAPP.md  project.md  requirements.md  roadmap.md  state.md
backend/tests/: conftest.py
(+146 files in other folders)
